--- a/src/vnsw/agent/contrail/SConscript
+++ b/src/vnsw/agent/contrail/SConscript
@@ -117,6 +117,14 @@ contrail_vrouter_agent = env.Program(target = 'contrail-vrouter-agent',
 env.Alias('contrail-vrouter-agent', contrail_vrouter_agent)
 env.Default(contrail_vrouter_agent)
 
+if sys.platform.startswith('win'):
+    #Use WiX for MSI generation
+    agent_msi = env.WiX('contrail-vrouter-agent.msi', ['msi/agent_msi.wxs'])
+    env.Depends(agent_msi, contrail_vrouter_agent)
+
+    env.Alias('contrail-vrouter-agent.msi', agent_msi)
+    env.Default(agent_msi)
+
 utils_scripts = [
   'contrail-vrouter-agent-health-check.py',
   'agent_dissector.lua',
