unstubbing of some commented functionality, fixes for winsock related compilation errors in unit tests

--- a/lib/windowsstubs/SConscript
+++ b/lib/windowsstubs/SConscript
@@ -41,6 +41,6 @@ def enumfiles(directory, pattern):
 
 
 windowsstubs_lib = '#build/lib/windowsstubs.lib'
-sources = ['#windows/winutils.cpp', '#windows/windowsstubs/windowsstubs/TimeUtils.cpp', '#windows/windowsstubs/windowsstubs/AgentConstants.cpp', '#windows/windowsstubs/windowsstubs/wmi.cpp' , '#windows/windowsstubs/windowsstubs/cpuinfo.cpp']
+sources = ['#windows/winutils.cpp', '#windows/windowsstubs/windowsstubs/TimeUtils.cpp', '#windows/windowsstubs/windowsstubs/AgentConstants.cpp', '#windows/windowsstubs/windowsstubs/wmi.cpp' , '#windows/windowsstubs/windowsstubs/cpuinfo.cpp', '#windows/windowsstubs/windowsstubs/TaskUtil.cpp']
 env.Command(windowsstubs_lib, sources , build_windowsstubs_lib)
 env.Alias('windowsstubs', windowsstubs_lib)
