--- a/src/base/test/SConscript
+++ b/src/base/test/SConscript
@@ -13,12 +13,13 @@ env.Append(LIBPATH = env['TOP'] + '/base')
 env.Append(LIBPATH = env['TOP'] + '/base/test')
 env.Append(LIBPATH = env['TOP'] + '/io')
 
-env.Prepend(LIBS = ['base', 'gunit', 'task_test', 'io', 'sandesh', 'io', 'sandeshvns',
+env.Prepend(LIBS = ['base', 'gtest', 'task_test', 'io', 'sandesh', 'io', 'sandeshvns',
                     'nodeinfo', 'process_info', 'cpuinfo', 'base', 'http',
-                    'http_parser', 'curl', 'pugixml', 'boost_program_options'])
+                    'http_parser', 'curl', 'pugixml', 'boost_program_options', 'windowsstubs'])
 
 if sys.platform != 'darwin':
-    env.Append(LIBS = ['rt'])
+    if sys.platform != 'win32': #works on 64 bit also
+        env.Append(LIBS = ['rt'])
 
 libtask_test = env.Library('task_test',
                            ['task_test_util.cc',
