--- a/lib/SConscript
+++ b/lib/SConscript
@@ -46,7 +46,7 @@ elif platform.system() == 'Windows':
     subdirs += [
         'dirent',
         'openssl',
-        'windowsstubs'
+        'windowsstubs',
     ]
 
 for dir in subdirs:
