--- a/src/dns/bind/SConscript
+++ b/src/dns/bind/SConscript
@@ -6,10 +6,10 @@
 import sys
 Import('DnsEnv')
 env = DnsEnv.Clone()
-env.AppendUnique(CCFLAGS='/w')
-env.Depends('bind_interface','#build/include/openssl/conf.h')
-env.Append(CPPPATH = '#openssl\include')
-env.Append(CPPPATH = '#third_party\dirent\include')
+
+if not sys.platform.startswith('win'):
+    env.AppendUnique(CCFLAGS='-Wno-return-type')
+
 SandeshGenFiles = env.SandeshGenCpp('bind.sandesh')
 SandeshGenSrcs = env.ExtractCpp(SandeshGenFiles)
 
