--- a/lib/log4cplus/SConscript
+++ b/lib/log4cplus/SConscript
@@ -1,73 +1,48 @@
-import subprocess
-import os
-import shutil
-
 # -*- mode: python; -*-
-print 'installing log4cplus'
-vpath = '#/third_party/log4cplus-1.1.3-rc7'
+import os
+import platform
+import subprocess
+from distutils.dir_util import copy_tree
+from shutil import copyfile
 
-env = DefaultEnvironment()
-abs_vpath = Dir(vpath).abspath
-abs_toppath = Dir('#').abspath
+vpath = '#/third_party/log4cplus-1.1.1'
 
-loglibs = [ str(File('#/build/lib/log4cplus.lib')) ]
-logshlibs = [ str(File('#/build/lib/log4cplusD.dll')) ]
-logproducts = loglibs + logshlibs #+ [ str(File('#/build/include/log4cplus/logger.h')) ]
-builtbinpath = os.path.join(abs_vpath,'msvc10')
+env = DefaultEnvironment(MSVC_SETUP_RUN=True)
 
-if env['TARGET_ARCH'] == 'x86':
-   builtbinpath = os.path.join(builtbinpath, '')
+if platform.system() == 'Windows':
+    output_lib = File('#/build/lib/log4cplusD.lib')
+    output_dll = File('#/build/bin/log4cplusD.dll')
+    
+    def build(target, source, env):
+        msbuild = [os.environ['MSBUILD'], 'log4cplus.vcxproj', '/p:PlatformToolset=v140',
+                   '/p:Configuration=Debug', '/p:Platform=x64']
+        subprocess.call(msbuild, cwd = os.path.join(Dir(vpath).abspath, 'msvc10'))
+        copy_tree(os.path.join(Dir(vpath).abspath, r'include\log4cplus'), Dir('#/build/include/log4cplus').abspath)
+        copyfile(os.path.join(Dir(vpath).abspath, r'msvc10\x64\bin.Debug\log4cplusD.lib'), output_lib.abspath)
+        copyfile(os.path.join(Dir(vpath).abspath, r'msvc10\x64\bin.Debug\log4cplusD.dll'), output_dll.abspath)
+    
+    products = [output_lib, output_dll, File('#/build/include/log4cplus/logger.h')]
+    
+    env.Command(products, Dir(vpath), build)
+
 else:
-   builtbinpath = os.path.join(builtbinpath, 'x64')
+    config_opts = '--prefix=' + str(Dir('#/build'))
 
+    cmd = ('(cd ' + Dir('.').abspath + '; ' + str(Dir(vpath)) +
+           '/configure' + ' ' + config_opts + '; make clean; make; make install)')
 
-builtbinpath = os.path.join(builtbinpath, 'bin.' + env['TARGET_CONFIG'])
+    version = '.7.0.0'
+    libs = [ str(File('#/build/lib/liblog4cplus' + env['LIBSUFFIX'])) ]
+    shlibs = [ str(File('#/build/lib/liblog4cplus-1.1' + env['SHLIBSUFFIX'] +
+                        version)) ]
+    products = libs + shlibs + [ str(File('#/build/include/log4cplus/logger.h')) ]
 
+    log4cplus_cfg = env.Command('config.status', str(Dir(vpath)), cmd)
 
+    env.SideEffect(products, log4cplus_cfg)
 
-def Symlink(target, source):
-    print 'target =', target[0]
-    print 'source = ' , source[0]
-    parent = os.path.dirname(target[0].abspath)
-    if not os.path.exists(parent):
-        os.makedirs(parent)
+    env.Alias('install', env.Install(env['INSTALL_LIB'], shlibs))
 
-    if not os.path.exists(target[0].abspath):
-        os.symlink(source[0].abspath, target[0].abspath)
-
-libpath = Dir(vpath).abspath
-if not os.path.exists(libpath):
-    print '%s not present' % libpath
-    sys.exit(1)
-
-def build_log4cplus_for_windows(target,source,env):
-    cmd = 'xcopy ' + abs_toppath + '\controller\lib\log4cplus\msvc15\* ' + Dir(vpath).abspath + '\msvc10 /e /y'
-    print cmd
-    subprocess.call(cmd, shell=True)
-    curdir = os.getcwd()
-    os.chdir(Dir(vpath).abspath+ '\\msvc10')
-    subprocess.call("msbuild log4cplus.sln", shell=True)
-    cmd = 'xcopy /Y ' + os.path.join(builtbinpath,'*.lib ') + Dir('#/build/lib/*').abspath
-    print cmd
-    subprocess.call(cmd, shell=True)
-    cmd = 'xcopy /Y ' + os.path.join(builtbinpath,'*.bin ') + Dir('#/build/bin/*').abspath
-    print cmd
-    subprocess.call(cmd, shell=True)
-    cmd = 'xcopy /Y ' +os.path.join(builtbinpath,'*.dll ') + Dir('#/build/bin/*').abspath
-    print cmd
-    subprocess.call(cmd, shell=True)
-    os.chdir(curdir)
-    print os.getcwd()
-    if not os.path.exists(Dir('#/build/lib').abspath+ r'\log4cplus.lib'):
-       print 'copying log4cplus.lib'
-       shutil.copyfile(os.path.join(builtbinpath,'log4CplusSD.lib'), os.path.join(Dir('#/build/lib').abspath,'log4cplus.lib'))
-srcdir = Dir(vpath + '/include/log4cplus').abspath
-destdir = Dir('#/build/include/log4cplus').abspath
-
-if not os.path.exists(destdir):
-  print 'copying to ' + destdir
-  shutil.copytree(srcdir, destdir)
-  
-env.Command('#/build/lib/log4cplus.lib', str(Dir(vpath)), build_log4cplus_for_windows)
-env.Alias('log4cplus', '#/build/lib/log4cplus.lib')
-print 'leave log4cplus'
+    env.Alias('install',
+              env.Symlink(env['INSTALL_LIB'] + '/liblog4cplus-1.1.so' + '.7',
+                          env['INSTALL_LIB'] + '/liblog4cplus-1.1.so' + version))
