--- a/src/SConscript
+++ b/src/SConscript
@@ -44,8 +44,11 @@ if sys.platform != 'darwin':
 include = ['#/controller/src', '#/build/include', '#controller/lib']
 
 libpath = ['#/build/lib']
-#WINDOWS-TEMP
-libs = ['boost_system', 'log4cplusD', 'libboost_system-vc140-mt-gd-1_62', 'libboost_date_time-vc140-mt-gd-1_62', 'libboost_regex-vc140-mt-gd-1_62', 'libboost_program_options-vc140-mt-gd-1_62', 'libboost_thread-vc140-mt-gd-1_62', 'libboost_filesystem-vc140-mt-gd-1_62']
+
+if sys.platform.startswith('win'):
+    libs = ['boost_system', 'log4cplusD', 'libboost_system-vc140-mt-gd-1_62', 'libboost_date_time-vc140-mt-gd-1_62', 'libboost_regex-vc140-mt-gd-1_62', 'libboost_program_options-vc140-mt-gd-1_62', 'libboost_thread-vc140-mt-gd-1_62', 'libboost_filesystem-vc140-mt-gd-1_62']
+else:
+    libs = ['boost_system', 'log4cplus', 'pthread']
 
 common = DefaultEnvironment().Clone()
 
@@ -56,8 +59,13 @@ else:
 
 common.Append(LIBPATH = libpath)
 common.Prepend(LIBS = libs)
-common.Append(CCFLAGS = '/w')
-common.Append(CCFLAGS = '/D NOMINMAX')
+
+if sys.platform.startswith('win'):
+    common.Append(CCFLAGS = '-Wall -Werror -Wsign-compare')
+else:
+    common.Append(CCFLAGS = '/w')
+    common.Append(CCFLAGS = '/D NOMINMAX')
+
 if not sys.platform.startswith('darwin'):
     if platform.system().startswith('Linux'):
        if not platform.linux_distribution()[0].startswith('XenServer'):
