--- a/lib/gunit/SConscript
+++ b/lib/gunit/SConscript
@@ -29,7 +29,7 @@ output_gmock = File('#/build/lib/gmock.lib')
 output_gtest = File('#/build/lib/gtestd.lib')
 
 def gtest_build(target, source, env):
-    msbuild = [os.environ['MSBUILD'], 'gtest.sln', '/Build']
+    msbuild = [os.environ['MSBUILD'], 'gtest.sln']
     copy_tree(Dir('#/controller/lib/gunit/msvc15').abspath, Dir(gtest_path).abspath + r'\msvc')
     subprocess.call(msbuild, cwd=os.path.join(Dir(gtest_path).abspath,'msvc'))
     fromfile = os.path.join(Dir(gtest_path).abspath , r'msvc\gtest\Debug\gtestd.lib')
@@ -38,7 +38,7 @@ def gtest_build(target, source, env):
 env.Command(output_gtest, Dir(gtest_path), gtest_build)
 
 def gmock_build(target, source, env):
-    msbuild = [os.environ['MSBUILD'], 'gmock.sln', '/Build']
+    msbuild = [os.environ['MSBUILD'], 'gmock.sln']
     copy_tree(Dir('#/controller/lib/gunit/msvc15/gmock').abspath, Dir(gmock_path).abspath + r'\msvc\2015')
     subprocess.call(msbuild, cwd=os.path.join(Dir(gmock_path).abspath, r'/msvc/2015'))
     fromfile = os.path.join(Dir(gmock_path).abspath, r'msvc\2015\Debug\gmock.lib')
